base/NotificationService/deployment-notificationservice.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - name: notificationservice
          image: "ghcr.io/coendv/group1-notificationservice:dev"
          ports:
            - containerPort: 8086
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
