base/NotificationService/route-notificationservice.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: notificationservice
spec:
  to:
    kind: Service
    name: notificationservice
  port:
    targetPort: 8086
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
